@@ -1,6 +1,10 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+Zcountallelescpp <- function(x, Amax, w) {
+    .Call('DNAprofiles_Zcountallelescpp', PACKAGE = 'DNAprofiles', x, Amax, w)
+}
+
 Zdbcomparepairwise <- function(db, nloci, display_progress = TRUE) {
     .Call('DNAprofiles_Zdbcomparepairwise', PACKAGE = 'DNAprofiles', db, nloci, display_progress)
 }
